istio-egress/k8/24-virtualservice-external-api-2.yaml
# Same two-stage routing pattern as 22-virtualservice.yaml, for the second
# external system. Note the mesh-origin match still routes to the SAME
# egressgateway Service -- one gateway workload, multiple external hosts.
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: external-api-2-via-egress
  namespace: client-secure
spec:
  hosts:
    - external-api-2-external-api-2.apps.cluster-bdvkn.bdvkn.sandbox980.opentlc.com
  gateways:
    - mesh
    - egress-gateway/egressgateway-hop1
  http:
    - match:
        - gateways:
            - mesh
          port: 80
      route:
        - destination:
            host: egressgateway.egress-gateway.svc.cluster.local
            port:
              number: 443
    - match:
        - gateways:
            - egress-gateway/egressgateway-hop1
          port: 443
      route:
        - destination:
            host: external-api-2-external-api-2.apps.cluster-bdvkn.bdvkn.sandbox980.opentlc.com
            port:
              number: 443
